# lyra

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .prettierignore  .prettierrc  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  architecture_optimizations.md  avoid_double_parsing_plan.md  package-lock.json  package.json
docs/: README.md  (+41 more)
tests/: BUILD.bazel  canonical_observable_shape_test.cpp  cli_emit_cpp_test.cpp  cli_golden_test.cpp  cli_run_test.cpp  cpp_test.cpp  diag_framework_test.cpp  diag_struct_test.cpp  dpi_visible_name_collision_test.cpp  main.cpp  pch_audit_test.cpp  run_test.cpp  suites.yaml  sv_feature_test.bzl  trace_manager_test.cpp  trace_selection_test.cpp  trace_signal_meta_test.cpp  write_plan_test.cpp
tests/cases/cpp/aggregate_constant_reference/: case.yaml  main.sv
tests/cases/cpp/always_basic_loop/: case.yaml  main.sv
tests/cases/cpp/always_clock_generator/: case.yaml  main.sv
tests/cases/cpp/always_comb_basic/: case.yaml  main.sv
tests/cases/cpp/always_comb_block_body/: case.yaml  main.sv
tests/cases/cpp/always_comb_chain/: case.yaml  main.sv
tests/cases/cpp/always_comb_conditional/: case.yaml  main.sv
tests/cases/cpp/always_comb_function_read_in_generate/: case.yaml  main.sv
tests/cases/cpp/always_comb_no_inputs/: case.yaml  main.sv
tests/cases/cpp/always_comb_nonlocal_sensitivity/: case.yaml  main.sv
tests/cases/cpp/always_comb_reacts_to_change/: case.yaml  main.sv
tests/cases/cpp/always_counter/: case.yaml  main.sv
tests/cases/cpp/always_ff_async_reset/: case.yaml  main.sv
tests/cases/cpp/always_ff_keyword_equivalent/: case.yaml  main.sv
tests/cases/cpp/always_ff_pipeline/: case.yaml  main.sv
tests/cases/cpp/always_ff_register/: case.yaml  main.sv
tests/cases/run/: blocking_assign.sv  delay_chained_zero.sv  delay_default_timescale.sv  delay_explicit_timescale.sv  delay_ordering.sv  delay_zero_inactive.sv
tests/cli/: cli_test_fixture.cpp  cli_test_fixture.hpp  config_tests.cpp  dump_tests.cpp  init_tests.cpp
tests/common/: simulate_util.hpp
tests/diag/: render_test.cpp
tests/diag_framework/: diag_matcher.cpp  diag_matcher.hpp  expected_diag.hpp  yaml_parser.cpp  yaml_parser.hpp
tests/e2e/: binary_ops_tests.cpp  codegen_tests.cpp  control_flow_tests.cpp  initial_tests.cpp  loop_tests.cpp  non_blocking_tests.cpp  timing_tests.cpp  unary_ops_tests.cpp  variable_declaration_tests.cpp  wait_event_tests.cpp
tests/framework/: aot_backend.cpp  aot_backend.hpp  arg_parse.cpp  arg_parse.hpp  assertions.cpp  assertions.hpp  batch_compiler.cpp  batch_compiler.hpp  build.cpp  build.hpp  case_runner.cpp  case_runner.hpp  dpi_test_support.cpp  dpi_test_support.hpp  engine_test_access.hpp  expectation_eval.cpp  expectation_eval.hpp  fatal_subprocess.cpp  fatal_subprocess.hpp  jit_backend.cpp  jit_backend.hpp  lli_backend.cpp  lli_backend.hpp  llvm_backend.cpp  llvm_backend.hpp  llvm_common.cpp  llvm_common.hpp  matcher.cpp  matcher.hpp  mir_backend.cpp  mir_backend.hpp  process.cpp  process.hpp  process_runner.cpp  process_runner.hpp  run_sv_test.sh  runner.cpp  runner.hpp  runner_common.hpp  suite.hpp  (+18 more)
tests/runtime/: gc_ref_test.cpp
tests/sv_features/assertions/: default.yaml  deferred_assert_actions.yaml  deferred_thunks.yaml  jit_only.yaml
tests/sv_features/compilation_units/: default.yaml
tests/sv_features/constants/: parameters.yaml
tests/sv_features/control_flow/: case.yaml  case_inside.yaml  conditionals.yaml  do_while.yaml  for.yaml  foreach.yaml  forever.yaml  loops.yaml  repeat.yaml  ternary.yaml  unique_priority_case.yaml  unique_priority_if.yaml  while.yaml
tests/sv_features/datatypes/: arbitrary_width.yaml  arrays.yaml  conversions.yaml  dynamic_arrays.yaml  enum.yaml  enum_methods.yaml  indexed_part_select.yaml  math.yaml  nested_aggregates.yaml  packed_2d.yaml  packed_3d.yaml  packed_struct.yaml  packed_union.yaml  queues.yaml  real_types.yaml  realtime_types.yaml  shortreal_types.yaml  size_cast.yaml  string_concat.yaml  typedef.yaml  unpacked_array_constants.yaml  unpacked_struct.yaml  unpacked_union.yaml  variables.yaml  wide_packed_2d.yaml
tests/sv_features/directives/: time_literals.yaml  timescale.yaml
tests/sv_features/display/: basic.yaml  monitor.yaml  strobe.yaml
tests/sv_features/functions/: basic.yaml  nested_calls.yaml  reserved_keywords.yaml  string_return.yaml
tests/sv_features/generate/: generate.yaml
tests/sv_features/hierarchy/: hierarchical_reads.yaml  hierarchical_sensitivity.yaml  instantiation.yaml  local_variables.yaml  multiple_instances.yaml  output_ports.yaml  port_expressions.yaml  simple_submodule.yaml
tests/sv_features/known_bugs/: cross_process_edge_polarity.yaml
tests/sv_features/lifecycle/: move_aggregate.yaml
tests/sv_features/metadata/: slot_meta.yaml  slot_meta_four_state.yaml
tests/sv_features/mutation/: structural.yaml
tests/sv_features/operators/: binary.yaml  binary_four_state.yaml  binary_integral.yaml  binary_string.yaml  binary_two_state.yaml  bitwise_four_state.yaml  case_equality.yaml  case_equality_four_state.yaml  compound_assignment.yaml  concat.yaml  inside.yaml  inside_four_state.yaml  replicate.yaml  replication_patterns.yaml  unary.yaml  value_temp_expansion.yaml
tests/sv_features/processes/: edge_trigger_bit_select.yaml  edge_trigger_dynamic.yaml  edge_trigger_unsupported.yaml  initial.yaml  non_blocking.yaml  timing.yaml  wait_event.yaml
tests/sv_features/scheduling/: regions.yaml  sub_slot_observation.yaml  zero_delay.yaml
tests/sv_features/statements/: continuous_assign.yaml  generate.yaml  procedural_assign.yaml
tests/sv_features/system_functions/: conversions.yaml
tests/sv_features/system_tasks/: display.yaml  file_output.yaml  mem_io.yaml  plusargs.yaml  severity.yaml  sformat.yaml  simulation_control.yaml  time_functions.yaml
tests/sv_features/timing/: printtimescale.yaml  timeformat.yaml  timescale.yaml  timeunit.yaml
tests/sv_features/trace/: basic.yaml  bulk_ops.yaml  update_set.yaml
tests/unit/: wide_bit_test.cpp
tests/utils/: cpp_test_runner.cpp  cpp_test_runner.hpp
(+4867 files in other folders)
