load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "support",
    hdrs = glob(["include/lyra/support/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hir",
    srcs = glob(["src/lyra/hir/*.cpp"]),
    hdrs = glob(["include/lyra/hir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":support"],
)

cc_library(
    name = "mir",
    srcs = glob(["src/lyra/mir/*.cpp"]),
    hdrs = glob(["include/lyra/mir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "frontend",
    srcs = glob([
        "src/lyra/frontend/*.cpp",
        "src/lyra/frontend/*.hpp",
    ]),
    hdrs = glob(["include/lyra/frontend/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":support",
        "@fmt",
        "@slang",
    ],
)

cc_library(
    name = "ast_to_hir",
    srcs = glob([
        "src/lyra/lowering/ast_to_hir/**/*.cpp",
        "src/lyra/lowering/ast_to_hir/**/*.hpp",
    ]),
    hdrs = glob(["include/lyra/lowering/ast_to_hir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":hir",
        ":support",
        "@slang",
    ],
)

cc_library(
    name = "hir_to_mir",
    srcs = glob(["src/lyra/lowering/hir_to_mir/*.cpp"]),
    hdrs = glob(["include/lyra/lowering/hir_to_mir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":hir",
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "projection_cpp",
    srcs = glob([
        "src/lyra/projection/cpp/*.cpp",
        "src/lyra/projection/cpp/*.hpp",
    ]),
    hdrs = glob(["include/lyra/projection/cpp/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":mir",
        ":support",
    ],
)

cc_binary(
    name = "lyra_cli",
    srcs = ["src/lyra/driver/cli.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_to_hir",
        ":frontend",
        ":hir_to_mir",
        ":projection_cpp",
        "@fmt",
    ],
)
