load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

filegroup(
    name = "runtime_sources",
    srcs = glob(["src/lyra/runtime/*.cpp"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "runtime_headers",
    srcs = glob([
        "include/lyra/runtime/*.hpp",
        "include/lyra/support/*.hpp",
    ]),
    visibility = ["//visibility:public"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "external",
    targets = {
        "//...": "",
    },
)

cc_library(
    name = "support",
    hdrs = glob(["include/lyra/support/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "diag",
    srcs = glob(["src/lyra/diag/*.cpp"]),
    hdrs = glob(["include/lyra/diag/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":support",
        "@fmt",
    ],
)

cc_library(
    name = "slang_source",
    hdrs = ["include/lyra/frontend/slang_source_mapper.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        "@slang",
    ],
)

cc_library(
    name = "runtime",
    srcs = glob(["src/lyra/runtime/*.cpp"]),
    hdrs = glob(["include/lyra/runtime/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":support"],
)

cc_library(
    name = "hir",
    srcs = glob(["src/lyra/hir/*.cpp"]),
    hdrs = glob(["include/lyra/hir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":support"],
)

cc_library(
    name = "mir",
    srcs = glob(["src/lyra/mir/*.cpp"]),
    hdrs = glob(["include/lyra/mir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":support"],
)

cc_library(
    name = "frontend",
    srcs = glob([
        "src/lyra/frontend/*.cpp",
        "src/lyra/frontend/*.hpp",
    ]),
    hdrs = glob(["include/lyra/frontend/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":slang_source",
        ":support",
        "@fmt",
        "@slang",
    ],
)

cc_library(
    name = "ast_to_hir",
    srcs = glob([
        "src/lyra/lowering/ast_to_hir/**/*.cpp",
        "src/lyra/lowering/ast_to_hir/**/*.hpp",
    ]),
    hdrs = glob(["include/lyra/lowering/ast_to_hir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":hir",
        ":slang_source",
        ":support",
        "@slang",
    ],
)

cc_library(
    name = "hir_to_mir",
    srcs = glob(["src/lyra/lowering/hir_to_mir/*.cpp"]),
    hdrs = glob(["include/lyra/lowering/hir_to_mir/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":hir",
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "backend_cpp",
    srcs = glob([
        "src/lyra/backend/cpp/*.cpp",
        "src/lyra/backend/cpp/*.hpp",
    ]),
    hdrs = glob(["include/lyra/backend/cpp/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "compiler",
    srcs = ["src/lyra/compiler/compile.cpp"],
    hdrs = ["include/lyra/compiler/compile.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_to_hir",
        ":diag",
        ":frontend",
        ":hir",
        ":hir_to_mir",
        ":mir",
        ":support",
    ],
)

cc_binary(
    name = "lyra",
    srcs = ["src/lyra/driver/cli.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend_cpp",
        ":compiler",
        ":diag",
        ":frontend",
        ":hir",
        ":mir",
        ":support",
        "@argparse",
        "@fmt",
    ],
)
