load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")

# Promote a small set of always-real warnings to errors on Lyra's own sources.
# Scoped per-target so external dependencies keep their own warning policy.
# -Wswitch catches a no-default switch that omits an enumerator; -Wreturn-type
# catches falling off the end of a non-void function.
LYRA_COPTS = [
    "-Werror=switch",
    "-Werror=return-type",
]

filegroup(
    name = "runtime_headers",
    srcs = glob([
        "include/lyra/runtime/*.hpp",
        "include/lyra/value/*.hpp",
        "include/lyra/support/*.hpp",
        "include/lyra/base/*.hpp",
    ]),
    visibility = ["//visibility:public"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "external",
    targets = {
        "//...": "",
    },
)

cc_library(
    name = "base",
    srcs = glob(["src/lyra/base/*.cpp"]),
    hdrs = glob(["include/lyra/base/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "support",
    srcs = glob(["src/lyra/support/*.cpp"]),
    hdrs = glob(["include/lyra/support/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":diag",
    ],
)

cc_library(
    name = "diag",
    srcs = glob(["src/lyra/diag/*.cpp"]),
    hdrs = glob(["include/lyra/diag/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        "@fmt",
    ],
)

cc_library(
    name = "slang_source",
    hdrs = ["include/lyra/frontend/slang_source_mapper.hpp"],
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        "@slang",
    ],
)

cc_library(
    name = "value",
    srcs = glob(["src/lyra/value/*.cpp"]),
    hdrs = glob(["include/lyra/value/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
    ],
)

cc_library(
    name = "runtime",
    srcs = glob(["src/lyra/runtime/*.cpp"]),
    hdrs = glob(["include/lyra/runtime/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":support",
        ":value",
        "@boost.context//:boost.context",
    ],
)

cc_static_library(
    name = "cpp_runtime",
    visibility = ["//visibility:public"],
    deps = [":runtime"],
)

cc_library(
    name = "hir",
    srcs = glob(["src/lyra/hir/*.cpp"]),
    hdrs = glob(["include/lyra/hir/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":support",
    ],
)

cc_library(
    name = "mir",
    srcs = glob(["src/lyra/mir/*.cpp"]),
    hdrs = glob(["include/lyra/mir/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":support",
        ":value",
    ],
)

cc_library(
    name = "lir",
    srcs = glob(["src/lyra/lir/*.cpp"]),
    hdrs = glob(["include/lyra/lir/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "frontend",
    srcs = glob(["src/lyra/frontend/*.cpp"]),
    hdrs = glob(["include/lyra/frontend/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":slang_source",
        ":support",
        "@fmt",
        "@slang",
    ],
)

cc_library(
    name = "ast_to_hir",
    srcs = glob(["src/lyra/lowering/ast_to_hir/**/*.cpp"]),
    hdrs = glob(["include/lyra/lowering/ast_to_hir/**/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":hir",
        ":slang_source",
        ":support",
        "@slang",
    ],
)

cc_library(
    name = "hir_to_mir",
    srcs = glob(["src/lyra/lowering/hir_to_mir/**/*.cpp"]),
    hdrs = glob(["include/lyra/lowering/hir_to_mir/**/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":hir",
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "mir_to_lir",
    srcs = glob(["src/lyra/lowering/mir_to_lir/**/*.cpp"]),
    hdrs = glob(["include/lyra/lowering/mir_to_lir/**/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":diag",
        ":lir",
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "backend_cpp",
    srcs = glob(["src/lyra/backend/cpp/*.cpp"]),
    hdrs = glob(["include/lyra/backend/cpp/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":mir",
        ":support",
    ],
)

cc_library(
    name = "backend_llvm",
    srcs = glob(["src/lyra/backend/llvm/*.cpp"]),
    hdrs = glob(["include/lyra/backend/llvm/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":lir",
        ":support",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "unit_metadata",
    srcs = ["src/lyra/compiler/unit_metadata.cpp"],
    hdrs = ["include/lyra/compiler/unit_metadata.hpp"],
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":mir"],
)

cc_library(
    name = "jit",
    srcs = glob(["src/lyra/jit/*.cpp"]),
    hdrs = glob(["include/lyra/jit/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend_llvm",
        ":lir",
        ":runtime",
        ":unit_metadata",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:OrcJIT",
        "@llvm-project//llvm:OrcTargetProcess",
        "@llvm-project//llvm:Passes",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:X86AsmParser",
        "@llvm-project//llvm:X86CodeGen",
    ],
)

cc_library(
    name = "compiler",
    srcs = glob(
        ["src/lyra/compiler/*.cpp"],
        exclude = ["src/lyra/compiler/unit_metadata.cpp"],
    ),
    hdrs = glob(
        ["include/lyra/compiler/*.hpp"],
        exclude = ["include/lyra/compiler/unit_metadata.hpp"],
    ),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_to_hir",
        ":diag",
        ":frontend",
        ":hir",
        ":hir_to_mir",
        ":lir",
        ":mir",
        ":mir_to_lir",
        ":support",
        ":unit_metadata",
    ],
)

cc_library(
    name = "driver",
    srcs = glob(
        ["src/lyra/driver/*.cpp"],
        exclude = ["src/lyra/driver/cli.cpp"],
    ),
    hdrs = glob(["include/lyra/driver/*.hpp"]),
    copts = LYRA_COPTS,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend_cpp",
        ":diag",
        ":mir",
        ":support",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "lyra",
    srcs = ["src/lyra/driver/cli.cpp"],
    copts = LYRA_COPTS,
    data = [
        ":cpp_runtime",
        ":runtime_headers",
    ],
    linkopts = ["-rdynamic"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend_llvm",
        ":compiler",
        ":diag",
        ":driver",
        ":frontend",
        ":hir",
        ":jit",
        ":lir",
        ":mir",
        ":support",
        ":unit_metadata",
        "@argparse",
        "@fmt",
    ],
)
