"""
Bazel module file for Lyra SystemVerilog simulator.
"""

module(
    name = "lyra",
    version = "0.1.0",
)

# Bazel rules for C/C++
bazel_dep(name = "rules_cc", version = "0.1.1")

# Slang SystemVerilog Compiler Library
bazel_dep(name = "slang", version = "8.0.0")
git_override(
    module_name = "slang",
    commit = "09b6e50d8747604b6958af52d423823fb79bc6f1",
    remote = "https://github.com/hankhsu1996/slang-bazel.git",
)

# Formatting
bazel_dep(name = "fmt", version = "11.1.3")

# Logging Library
bazel_dep(name = "spdlog", version = "1.15.1")

# Testing framework
bazel_dep(name = "googletest", version = "1.16.0.bcr.1")

# Development tools
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
