load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "framework",
    srcs = glob(["framework/*.cpp"]),
    hdrs = glob(["framework/*.hpp"]),
    visibility = ["//tests:__subpackages__"],
    deps = [
        "@fmt",
        "@yaml-cpp//:yaml-cpp",
    ],
)

cc_test(
    name = "diag_render_tests",
    srcs = ["diag/render_test.cpp"],
    deps = [
        "//:diag",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cpp_tests",
    srcs = ["cpp_test.cpp"],
    data = [
        "suites.yaml",
        "//:cpp_runtime",
        "//:lyra",
        "//:runtime_headers",
    ] + glob(
        [
            "cases/**/*.yaml",
            "cases/**/*.sv",
        ],
        allow_empty = True,
    ),
    # cpp-backend cases compile emitted artifacts with the host C++ compiler.
    # CI's `Test` job passes `--test_tag_filters=-requires-host-cxx` so this
    # target is excluded; run locally with `bazel test //tests:cpp_tests`.
    tags = ["requires-host-cxx"],
    deps = [
        ":framework",
        "@bazel_tools//tools/cpp/runfiles",
        "@fmt",
        "@googletest//:gtest",
    ],
)
