load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "framework",
    srcs = glob(["framework/*.cpp"]),
    hdrs = glob(["framework/*.hpp"]),
    visibility = ["//tests:__subpackages__"],
    deps = [
        "//:value",
        "@fmt",
        "@yaml-cpp//:yaml-cpp",
    ],
)

cc_test(
    name = "diag_render_tests",
    srcs = ["diag/render_test.cpp"],
    deps = [
        "//:diag",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "run_tests",
    srcs = ["run_test.cpp"],
    data = ["//:lyra"],
    # `compile`/`run` drive the host C++ compiler, so this is excluded from CI's
    # `Test` job (which filters out `requires-host-cxx`). Run locally with
    # `bazel test //tests:run_tests`.
    tags = ["requires-host-cxx"],
    deps = [
        ":framework",
        "//:support",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cpp_tests",
    srcs = ["cpp_test.cpp"],
    data = [
        "suites.yaml",
        "//:lyra",
    ] + glob(
        [
            "cases/**/*.yaml",
            "cases/**/*.sv",
        ],
        allow_empty = True,
    ),
    shard_count = 16,
    # cpp-backend cases run `lyra run`, which builds with the host C++ compiler.
    # CI's `Test` job passes `--test_tag_filters=-requires-host-cxx` so this
    # target is excluded; run locally with `bazel test //tests:cpp_tests`.
    tags = ["requires-host-cxx"],
    deps = [
        ":framework",
        "@bazel_tools//tools/cpp/runfiles",
        "@fmt",
        "@googletest//:gtest",
    ],
)
